--- a/mkdocs-sandbox/mkdocs.yml
+++ b/mkdocs-sandbox/mkdocs.yml
@@ -4,7 +4,7 @@ theme: mkdocs
 markdown_extensions: ['extra', 'admonition', 'mathjax', 'iconfonts(base=fa,prefix=fa)']
 
 extra_css: ['css/tables.css','css/admonitions.css','css/fixes.css']
-extra_javascript: ['https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML','js/mathjaxhelper.js']
+extra_javascript: ['https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML','js/mathjaxhelper.js','js/fabric.min.js']
 
 repo_url: https://github.com/EdyJ/sustainable-docs
 
